<resources>
    <string name="app_name">Showcase</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="unknown_response">Unknown response</string>
    <string name="list_apps_title">Showcase</string>
    <string name="load_apps_generic_error">There was an error loading</string>
    <string name="load_apps_no_internet">No internet connection.</string>
    <string name="load_apps_no_apps">No apps found.</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_contact">Contact</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_generic_error">There was an error trying to login. Please try again later.</string>
    <string name="navigate">NAVIGATE</string>
    <string name="call">CALL</string>
    <string name="email">EMAIL</string>
    <string name="about_heading">ABOUT</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>
    <string name="about_company">DVT or Dynamic Visual Technologies was founded in 1999. It has grown to over 600 staff with offices in South Africa (Johannesburg, Centurion, Cape Town and Durban) and the United Kingdom (London). We service more than 100 local and international, medium and large organisations and build long-term partnerships with our clients.</string>
    <string name="about_services">SERVICE OFFERING</string>
    <string name="facebook_page">DVTmedia</string>
    <string name="twitter_account">DVT_Corporate</string>
    <string name="website_address">http://dvt.co.za</string>
    <string name="heading_functionality">Functionality</string>
    <string name="heading_technologies">Technology</string>
    <string name="email_subject_default">Query from Android App</string>
    <string name="install_app">Install</string>
    <string name="screenshots_heading">Screenshots</string>
    <string name="retry">Retry</string>
</resources>
