<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="office"
            type="za.co.dvt.android.showcase.model.Office" />

        <variable
            name="itemNavigator"
            type="za.co.dvt.android.showcase.ui.contact.OfficeItemNavigator" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewOfficeLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimaryDark"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{office.image}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/company_logo" />

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{office.name}"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/caption_text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewOfficeLocation"
                    tools:text="CAPE TOWN" />

                <View
                    android:id="@+id/viewDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/divider_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewName" />


                <Button
                    android:id="@+id/buttonEmail"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableTop="@drawable/ic_email"
                    android:onClick="@{() -> itemNavigator.email(office)}"
                    android:text="@string/email"
                    android:textColor="@color/button_blue"
                    app:layout_constraintEnd_toStartOf="@+id/buttonCall"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

                <Button
                    android:id="@+id/buttonCall"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableTop="@drawable/ic_call"
                    android:onClick="@{() -> itemNavigator.call(office)}"
                    android:text="@string/call"
                    android:textColor="@color/button_blue"
                    app:layout_constraintEnd_toStartOf="@+id/buttonNavigate"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/buttonEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

                <Button
                    android:id="@+id/buttonNavigate"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableTop="@drawable/ic_navigation"
                    android:onClick="@{() -> itemNavigator.navigate(office)}"
                    android:text="@string/navigate"
                    android:textColor="@color/button_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/buttonCall"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{office.address}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/viewDivider"
                    tools:text="Address: Hyde Park Lane Office Park" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</layout>
